# django_alternative_task

./: README.md  dogs.json  pyproject.toml
config/: settings.py  urls.py
dogs/: models.py  urls.py  views.py
dogs/migrations/: 0001_initial.py
dogs/templates/: base.html  dogs_detail.html  dogs_list.html
dogs/templates/includes/: inc_menu.html
