[tool.poetry]
name = "alternative-task"
version = "0.1.0"
description = ""
authors = ["Nikita-Musk <nik52119q@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
psycopg2-binary = "^2.9.9"
black = "^24.8.0"
pillow = "^10.4.0"
ipython = "^8.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
